--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,15 +38,20 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  lightbutton:#0000ff
 );
 
 
 // App iOS Variables
 // --------------------------------------------------
+$tabs-background:color($colors,lightbutton);
+$tabs-tab-color-inactive:color($colors,light);
+$tabs-tab-color-active:color($colors,light);
+$toolbar-background:color($colors,lightbutton);
 // iOS only Sass variables can go here
-
-
+$tabs-md-tab-text-color:color($colors,light);
+$tabs-md-tab-icon-color:color($colors,light);
 
 
 // App Material Design Variables
